--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 	},
 	"require-dev": {
 		"aipng/value-objects": "^2.0",
-		"mikey179/vfsStream": "^1.6",
+		"mikey179/vfsstream": "^1.6",
 		"phpstan/phpstan": "^0.11",
 		"phpstan/phpstan-phpunit": "^0.11",
 		"phpunit/phpunit": "^8.1"
