--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,12 @@
 		"jms/serializer": "^3.3"
 	},
 	"require-dev": {
-		"aipng/value-objects": "^2.0",
+		"aipng/value-objects": "^2.1",
 		"mikey179/vfsstream": "^1.6",
-		"phpstan/phpstan": "^0.11",
-		"phpstan/phpstan-phpunit": "^0.11",
-		"phpunit/phpunit": "^8.1"
+		"nette/di": "^3.0",
+		"phpstan/phpstan": "^0.12.18",
+		"phpstan/phpstan-phpunit": "^0.12.6",
+		"phpunit/phpunit": "^9.1"
 	},
 	"suggest": {
 		"aipng/value-objects": "For custom serialization of AipNg value objects",
