--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
 	},
 	"require": {
 		"php": ">= 7.2",
-		"doctrine/cache": "^1.7",
-		"jms/serializer": "^3.3"
+		"jms/serializer": "^3.3",
+		"symfony/cache": "^5.4"
 	},
 	"require-dev": {
 		"aipng/value-objects": "^2.1",
