--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,12 @@
 		"symfony/cache": "^v6.1.5"
 	},
 	"require-dev": {
-		"aipng/value-objects": "^2.1",
+		"aipng/value-objects": "^2.1 || ^3.0",
 		"mikey179/vfsstream": "^1.6",
 		"nette/di": "^v3.0",
 		"phpstan/phpstan": "^1.8.2",
 		"phpstan/phpstan-phpunit": "^1.1.1",
-		"phpunit/phpunit": "^9.1"
+		"phpunit/phpunit": "^10.5.7"
 	},
 	"suggest": {
 		"aipng/value-objects": "For custom serialization of AipNg value objects",
