add handler integration test

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"AipNg\\JsonSerializerTests\\": "tests/src/"
+			"AipNg\\JsonSerializerTests\\": "tests/src/",
+			"AipNg\\JsonSerializerTests\\Integration\\": "tests/integration"
 		}
 	},
 	"config": {
