--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,17 @@
 	},
 	"require": {
 		"php": ">= 8.3",
-		"jms/serializer": "^3.3",
-		"symfony/cache": "^v7.1"
+		"jms/serializer": "^3.31.1",
+		"symfony/cache": "^v7.1",
+		"symfony/validator": "^7.2"
 	},
 	"require-dev": {
-		"aipng/value-objects": "^2.1 || ^3.0",
+		"aipng/value-objects": "^3.1",
 		"mikey179/vfsstream": "^1.6",
 		"nette/di": "^v3.0",
-		"phpstan/phpstan": "^1.8.2",
-		"phpstan/phpstan-phpunit": "^1.1.1",
+		"phpstan/phpstan": "^2.0.3",
+		"phpstan/phpstan-nette": "^2.0",
+		"phpstan/phpstan-phpunit": "^2.0.1",
 		"phpunit/phpunit": "^11.4.2"
 	},
 	"suggest": {
