--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,10 +1,11 @@
 includes:
 	- vendor/phpstan/phpstan-phpunit/extension.neon
 	- vendor/phpstan/phpstan-phpunit/rules.neon
+	- vendor/phpstan/phpstan-nette/rules.neon
 
 
 parameters:
-	level: max
+	level: 8
 
 	paths:
 		- %rootDir%/../../../src
